[fix] images cropped in Safari (webkit)
- Closes: https://github.com/searxng/searxng/issues/4156

--- a/client/simple/src/less/style.less
+++ b/client/simple/src/less/style.less
@@ -475,7 +475,7 @@ article[data-vim-selected].category-social {
     padding: 0;
     border: none;
     height: 100%;
-    width: 100%;
+    width: auto;
     object-fit: cover;
     vertical-align: bottom;
     background: var(--color-result-image-background);
